# video-streamer

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
