[project]
name = "video-streamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "fastapi-socketio>=0.0.10",
    "loguru>=0.7.3",
    "netifaces>=0.10.6",
    "python-socketio>=5.12.1",
    "uvicorn>=0.34.0",
    "websocket>=0.2.1",
]
